fixed resizing to limit each item and prevent overflow

--- a/docroot/modules/humsci/react_paragraphs/scss/react_paragraphs.field_widget.scss
+++ b/docroot/modules/humsci/react_paragraphs/scss/react_paragraphs.field_widget.scss
@@ -25,10 +25,10 @@
   }
 
   .resizeable-item {
-    margin: 0 10px 0 0;
+    padding: 0 10px 0 0;
 
     &:last-child {
-      margin: 0;
+      padding: 0;
     }
   }
 }
